--- a/src/main/webapp/app/exam/manage/exam-management.component.html
+++ b/src/main/webapp/app/exam/manage/exam-management.component.html
@@ -124,7 +124,7 @@
                             <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
                                 <button type="submit" *ngIf="isAtLeastInstructor" [routerLink]="[exam.id, 'test-runs']" class="btn btn-info btn-sm mr-1 mb-1 tutor-dashboard">
                                     <fa-icon [icon]="'user'"></fa-icon>
-                                    <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.testRun' | translate }}</span>
+                                    <span class="d-none d-md-inline">{{ 'artemisApp.examManagement.testRun.testRun' | translate }}</span>
                                 </button>
                             </div>
                             <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
