disable assess test run button if view is loading, set isExamStarted flag

--- a/src/main/webapp/app/exam/manage/test-runs/test-run-management.component.html
+++ b/src/main/webapp/app/exam/manage/test-runs/test-run-management.component.html
@@ -11,8 +11,9 @@
                 </button>
                 <button
                     class="btn btn-primary btn-sm mr-1 mb-1"
-                    [disabled]="!testRunCanBeAssessed"
                     [routerLink]="['/course-management', course.id, 'exams', exam.id, 'test-runs', 'assess']"
+                    *ngIf="course?.isAtLeastInstructor"
+                    [disabled]="isLoading || !testRunCanBeAssessed"
                 >
                     <span jhiTranslate="artemisApp.examManagement.testRun.assess">Assess Test Runs</span>
                 </button>
