--- a/src/main/webapp/app/exam/manage/test-runs/create-test-run-modal.component.html
+++ b/src/main/webapp/app/exam/manage/test-runs/create-test-run-modal.component.html
@@ -1,10 +1,25 @@
-<form>
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="modal-title" id="createTestRunModal">Create Test Run</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
+<div class="modal-content">
+    <div class="modal-header">
+        <h4 class="modal-title" id="createTestRunModal">Create Test Run</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
+    </div>
+
+    <div class="modal-body">
+        <div class="mb-3">
+            <h5><span jhiTranslate="artemisApp.studentExams.workingTime">Working time</span></h5>
+            <p>Set the working time:</p>
+            <form class="d-flex" [formGroup]="workingTimeForm">
+                <div class="mr-2">
+                    <input formControlName="minutes" type="number" style="width: 60px; height: 35px" class="text-center" min="0" step="1" required />
+                    :
+                    <input formControlName="seconds" type="number" style="width: 60px; height: 35px" class="text-center" min="0" max="59" step="1" required />
+                </div>
+            </form>
         </div>
-        <div class="modal-body">
+
+        <div class="mb-3">
+            <h5>Exercises</h5>
+            <p>Select an exercise for every exercise group by clicking on it.</p>
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <tr>
@@ -45,9 +60,10 @@
                 </tbody>
             </table>
         </div>
+
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" (click)="cancel()">Cancel</button>
             <button type="button" class="btn btn-primary" data-dismiss="modal" [disabled]="!testRunConfigured" (click)="createTestRun()">Create Test Run</button>
         </div>
     </div>
-</form>
+</div>
