Change .json file for the naming

--- a/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exam-detail.component.html
@@ -89,7 +89,7 @@
                             <span jhiTranslate="artemisApp.studentExamDetail.result">Your points</span>
                         </th>
                         <th>
-                            <span jhiTranslate="artemisApp.exercise.maxScore">Max. points</span>
+                            <span jhiTranslate="artemisApp.exam.examSummary.points.maxPoints">Max. points</span>
                         </th>
 
                         <th>
