--- a/src/main/webapp/app/course/manage/course-management.component.html
+++ b/src/main/webapp/app/course/manage/course-management.component.html
@@ -169,6 +169,17 @@
                                 </div>
                                 <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_TA', 'ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
                                     <button
+                                        *ngIf="course.isAtLeastTutor"
+                                        type="submit"
+                                        [routerLink]="['/course-management', course.id, 'scores']"
+                                        class="btn btn-info btn-sm mr-1 mb-1"
+                                    >
+                                        <fa-icon [icon]="'question'"></fa-icon>
+                                        <span class="d-none d-md-inline">{{ 'entity.action.questionsAndAnswers' | translate }}</span>
+                                    </button>
+                                </div>
+                                <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_TA', 'ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
+                                    <button
                                         type="submit"
                                         *ngIf="course.isAtLeastTutor"
                                         [routerLink]="['/course-management', course.id, 'tutor-dashboard']"
