--- a/src/main/webapp/app/course/manage/course-management.component.html
+++ b/src/main/webapp/app/course/manage/course-management.component.html
@@ -171,7 +171,7 @@
                                     <button
                                         *ngIf="course.isAtLeastTutor"
                                         type="submit"
-                                        [routerLink]="['/course-management', course.id, 'scores']"
+                                        [routerLink]="['/course-management', course.id, 'questions']"
                                         class="btn btn-info btn-sm mr-1 mb-1"
                                     >
                                         <fa-icon [icon]="'question'"></fa-icon>
