add delete functionality for inline comments

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -33,6 +33,7 @@
                                 [feedback]="fileFeedbackPerLine[i]"
                                 (onCancelFeedback)="onCancelFeedback()"
                                 (onUpdateFeedback)="updateFeedback($event)"
+                                (onDeleteFeedback)="deleteFeedback($event)"
                             >
                             </jhi-code-editor-tutor-assessment-inline-feedback>
                         </td>
