--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -12,6 +12,12 @@
             <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
         </button>
     </div>
+    <div *ngIf="!readOnly && feedback.type === 'MANUAL'" class="form-group col-2 text-right">
+        <button type="submit" (click)="deleteFeedback()" class="btn btn-danger btn-sm mr-1">
+            <fa-icon [icon]="'trash-alt'"></fa-icon> <span jhiTranslate="entity.action.delete">Delete</span>
+        </button>
+
+    </div>
 </div>
 <div *ngIf="!readOnly">
     <button type="button" class="btn btn-secondary btn-sm" (click)="cancelFeedback()">
