--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -10,7 +10,7 @@
         <p *ngIf="!selectedFile && !isLoading" id="no-file-selected" class="text-center lead text-muted pt-5" jhiTranslate="artemisApp.editor.selectFile">
             Select a file to get started!
         </p>
-        <table>
+        <table class="w-100">
             <tbody>
                 <ng-container *ngFor="let lineOfCode of studentCodePerLine; let i = index">
                     <tr id="code-line-{{ i + 1 }}">
