--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -1,29 +1,32 @@
-<div class="form-row align-items-center">
-    <div class="form-group col-8">
-        <label jhiTranslate="artemisApp.assessment.detail.feedback"></label>
-        <textarea class="form-control" rows="1" [(ngModel)]="feedback.detailText" [readOnly]="readOnly"></textarea>
+<div class="border rounded" [style.max-width]="'780px'">
+    <div class="m-2">
+        <div class="form-row align-items-start">
+            <div class="form-group col-8" [style.max-width]="'500px'">
+                <label jhiTranslate="artemisApp.assessment.detail.feedback"></label>
+                <textarea class="form-control " rows="5" [(ngModel)]="feedback.detailText" [readOnly]="readOnly"></textarea>
+            </div>
+            <div class="form-group col-2" [style.max-width]="'100px'">
+                <label jhiTranslate="artemisApp.exercise.score"></label>
+                <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="readOnly" />
+            </div>
+            <div *ngIf="readOnly" class="form-group col-2">
+                <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm mr-1">
+                    <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
+                </button>
+            </div>
+            <div *ngIf="!readOnly && feedback.type === MANUAL" class="form-group col-2">
+                <button type="submit" (click)="deleteFeedback()" class="btn btn-danger btn-sm mr-1">
+                    <fa-icon [icon]="'trash-alt'"></fa-icon> <span jhiTranslate="entity.action.delete">Delete</span>
+                </button>
+            </div>
+        </div>
+        <div *ngIf="!readOnly">
+            <button type="button" class="btn btn-secondary btn-sm" (click)="cancelFeedback()">
+                <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+            </button>
+            <button type="submit" [disabled]="feedback.detailText ? feedback.detailText.trim().length === 0 : true" class="btn btn-primary btn-sm" (click)="updateFeedback()">
+                <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+            </button>
+        </div>
     </div>
-    <div class="form-group col-2 text-right">
-        <label jhiTranslate="artemisApp.exercise.score"></label>
-        <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="readOnly" />
-    </div>
-    <div *ngIf="readOnly" class="form-group col-2 text-right">
-        <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm mr-1">
-            <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
-        </button>
-    </div>
-    <div *ngIf="!readOnly && feedback.type === 'MANUAL'" class="form-group col-2 text-right">
-        <button type="submit" (click)="deleteFeedback()" class="btn btn-danger btn-sm mr-1">
-            <fa-icon [icon]="'trash-alt'"></fa-icon> <span jhiTranslate="entity.action.delete">Delete</span>
-        </button>
-
-    </div>
-</div>
-<div *ngIf="!readOnly">
-    <button type="button" class="btn btn-secondary btn-sm" (click)="cancelFeedback()">
-        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-    </button>
-    <button type="submit" [disabled]="feedback.detailText ? feedback.detailText.trim().length === 0 : true" class="btn btn-primary btn-sm" (click)="updateFeedback()">
-        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-    </button>
 </div>
