--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -1,6 +1,6 @@
 <div class="border rounded" [style.max-width]="'780px'" [class.alert-success]="feedback.credits > 0" [class.alert-danger]="feedback.credits < 0" [class.alert-warning]="feedback.credits === 0">
     <div class="m-2">
-        <div class="form-row align-items-start">
+        <div *ngIf="!readOnly; else readOnlyFeedback" class="form-row align-items-start">
             <div class="form-group col-8" [style.max-width]="'500px'">
                 <label jhiTranslate="artemisApp.assessment.detail.feedback"></label>
                 <textarea class="form-control " rows="5" [(ngModel)]="feedback.detailText" [readOnly]="readOnly"></textarea>
@@ -9,12 +9,7 @@
                 <label jhiTranslate="artemisApp.exercise.score"></label>
                 <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="readOnly" />
             </div>
-            <div *ngIf="readOnly" class="form-group col-2">
-                <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm mr-1">
-                    <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
-                </button>
-            </div>
-            <div *ngIf="!readOnly && feedback.type === MANUAL" class="form-group col-2">
+            <div *ngIf="feedback.type === MANUAL" class="form-group col-2">
                 <button type="submit" (click)="deleteFeedback()" class="btn btn-danger btn-sm mr-1">
                     <fa-icon [icon]="'trash-alt'"></fa-icon> <span jhiTranslate="entity.action.delete">Delete</span>
                 </button>
@@ -30,3 +25,19 @@
         </div>
     </div>
 </div>
+<ng-template #readOnlyFeedback>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col pl-0">
+                <h5 class="d-inline"><span class="badge" [class.badge-success]="feedback.credits > 0" [class.badge-danger]="feedback.credits < 0" [class.badge-warning]="feedback.credits === 0">{{feedback.credits + 'P'}}</span></h5>
+                <h6 class="d-inline"> Tutor Comment:</h6>
+            </div>
+            <div class="col d-flex justify-content-end">
+                <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm">
+                    <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
+                </button>
+            </div>
+        </div>
+        <div class="row ml-4 mt-2">{{feedback.detailText}}</div>
+    </div>
+</ng-template>
