--- a/src/main/webapp/app/exam/manage/test-runs/test-run-management.component.html
+++ b/src/main/webapp/app/exam/manage/test-runs/test-run-management.component.html
@@ -61,30 +61,37 @@
                     <td [width]="350">
                         <div class="w-100 text-right">
                             <div class="btn-group" *ngIf="course?.isAtLeastInstructor">
-                                <ng-container *ngIf="testRun.started; else notStarted">
-                                    <button class="btn btn-primary btn-sm mr-1 mb-1" [routerLink]="['/courses', course.id, 'exams', exam.id]">
-                                        <span *ngIf="testRun.submitted" jhiTranslate="artemisApp.exam.summary">Summary</span>
-                                        <span *ngIf="!testRun.submitted" jhiTranslate="artemisApp.examParticipation.continueAfterHandInEarly">Continue</span>
-                                    </button>
-                                    <button
-                                        class="btn btn-primary btn-sm mr-1 mb-1"
-                                        [routerLink]="['/course-management', course.id, 'exams', exam.id, 'test-runs', this.testRun.id, 'view']"
-                                        [disabled]="true"
-                                    >
-                                        <span jhiTranslate="artemisApp.examManagement.testRun.manage">Manage Working Time</span>
-                                    </button>
+                                <ng-container *ngIf="testRun.user.id == instructor.id; else notOwnerOfTestRun">
+                                    <ng-container *ngIf="!testRun.started; else started">
+                                        <button class="btn btn-primary btn-sm mr-1 mb-1" (click)="startTestRun(testRun)">
+                                            <span jhiTranslate="artemisApp.course.startDate">Start</span>
+                                        </button>
+                                    </ng-container>
+                                    <ng-template #started>
+                                        <ng-container *ngIf="!testRun.submitted; else submitted">
+                                            <button class="btn btn-primary btn-sm mr-1 mb-1" [routerLink]="['/courses', course.id, 'exams', exam.id]">
+                                                <span *ngIf="!testRun.submitted" jhiTranslate="artemisApp.examParticipation.continueAfterHandInEarly">Continue</span>
+                                            </button>
+                                        </ng-container>
+                                        <ng-template #submitted>
+                                            <button class="btn btn-primary btn-sm mr-1 mb-1" [routerLink]="'../' + testRun.id + '/summary'">
+                                                <span jhiTranslate="artemisApp.exam.summary">Summary</span>
+                                            </button>
+                                        </ng-template>
+                                    </ng-template>
                                 </ng-container>
-                                <ng-template #notStarted>
-                                    <button class="btn btn-primary btn-sm mr-1 mb-1" (click)="startTestRun(testRun)">
-                                        <span jhiTranslate="artemisApp.course.startDate">Start</span>
-                                    </button>
-                                    <button
-                                        class="btn btn-primary btn-sm mr-1 mb-1"
-                                        [routerLink]="['/course-management', course.id, 'exams', exam.id, 'test-runs', this.testRun.id, 'view']"
-                                    >
-                                        <span jhiTranslate="artemisApp.examManagement.testRun.manage">Manage Working Time</span>
+                                <ng-template #notOwnerOfTestRun>
+                                    <button class="btn btn-primary btn-sm mr-1 mb-1" [routerLink]="'../' + testRun.id + '/summary'">
+                                        <span jhiTranslate="artemisApp.exam.summary">Summary</span>
                                     </button>
                                 </ng-template>
+                                <button
+                                    class="btn btn-primary btn-sm mr-1 mb-1"
+                                    [routerLink]="['/course-management', course.id, 'exams', exam.id, 'test-runs', this.testRun.id, 'view']"
+                                    [disabled]="testRun.started"
+                                >
+                                    <span jhiTranslate="artemisApp.examManagement.testRun.manage">Manage Working Time</span>
+                                </button>
                                 <button
                                     jhiDeleteButton
                                     [entityTitle]="'artemisApp.examManagement.testRun.testRun' | translate"
