--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -4,6 +4,7 @@
         [startView]="true"
         [exam]="exam"
         [studentExam]="studentExam"
+        [testRunStartTime]="testRunStartTime"
         (onExamStarted)="examStarted($event)"
     ></jhi-exam-participation-cover>
 
