--- a/src/main/webapp/app/exercises/file-upload/manage/file-upload-exercise.component.html
+++ b/src/main/webapp/app/exercises/file-upload/manage/file-upload-exercise.component.html
@@ -47,73 +47,74 @@
                     <td *ngIf="course.presentationScore !== 0">{{ fileUploadExercise.presentationScoreEnabled }}</td>
                     <td>{{ fileUploadExercise.filePattern }}</td>
                     <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button
-                                type="submit"
-                                *ngIf="fileUploadExercise.isAtLeastTutor"
-                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'exercises', fileUploadExercise.id, 'scores']"
-                                class="btn btn-info btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'eye'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="fileUploadExercise.isAtLeastInstructor"
-                                [routerLink]="['/course-management', courseId, 'file-upload-exercises', fileUploadExercise.id, 'assessment']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.courseOverview.exerciseDetails.instructorActions.submissions">Submissions</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="fileUploadExercise.isAtLeastTutor"
-                                [routerLink]="['/course-management', courseId, 'exercises', fileUploadExercise.id, 'participations']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.participations">Participations</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="fileUploadExercise.teamMode && fileUploadExercise.isAtLeastTutor"
-                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'exercises', fileUploadExercise.id, 'teams']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'users'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.teams">Teams</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="fileUploadExercise.isAtLeastInstructor"
-                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'file-upload-exercises', fileUploadExercise.id]"
-                                class="btn btn-info btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'eye'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="fileUploadExercise.isAtLeastInstructor"
-                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'file-upload-exercises', fileUploadExercise.id, 'edit']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                            </button>
-                            <button
-                                *ngIf="fileUploadExercise.isAtLeastInstructor"
-                                jhiDeleteButton
-                                [entityTitle]="fileUploadExercise.title"
-                                deleteQuestion="artemisApp.exercise.delete.question"
-                                deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
-                                (delete)="deleteFileUploadExercise(fileUploadExercise.id)"
-                                [dialogError]="dialogError$"
-                            >
-                                <fa-icon [icon]="'times'"></fa-icon>
-                            </button>
-                        </div>
+<!--                        <div class="btn-group flex-btn-group-container">-->
+<!--                            <button-->
+<!--                                type="submit"-->
+<!--                                *ngIf="fileUploadExercise.isAtLeastTutor"-->
+<!--                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'exercises', fileUploadExercise.id, 'scores']"-->
+<!--                                class="btn btn-info btn-sm mr-1"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="'eye'"></fa-icon>-->
+<!--                                <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>-->
+<!--                            </button>-->
+<!--                            <button-->
+<!--                                type="submit"-->
+<!--                                *ngIf="fileUploadExercise.isAtLeastInstructor"-->
+<!--                                [routerLink]="['/course-management', courseId, 'file-upload-exercises', fileUploadExercise.id, 'assessment']"-->
+<!--                                class="btn btn-primary btn-sm mr-1"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>-->
+<!--                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.courseOverview.exerciseDetails.instructorActions.submissions">Submissions</span>-->
+<!--                            </button>-->
+<!--                            <button-->
+<!--                                type="submit"-->
+<!--                                *ngIf="fileUploadExercise.isAtLeastTutor"-->
+<!--                                [routerLink]="['/course-management', courseId, 'exercises', fileUploadExercise.id, 'participations']"-->
+<!--                                class="btn btn-primary btn-sm mr-1"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>-->
+<!--                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.participations">Participations</span>-->
+<!--                            </button>-->
+<!--                            <button-->
+<!--                                type="submit"-->
+<!--                                *ngIf="fileUploadExercise.teamMode && fileUploadExercise.isAtLeastTutor"-->
+<!--                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'exercises', fileUploadExercise.id, 'teams']"-->
+<!--                                class="btn btn-primary btn-sm mr-1"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="'users'"></fa-icon>-->
+<!--                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.teams">Teams</span>-->
+<!--                            </button>-->
+<!--                            <button-->
+<!--                                type="submit"-->
+<!--                                *ngIf="fileUploadExercise.isAtLeastInstructor"-->
+<!--                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'file-upload-exercises', fileUploadExercise.id]"-->
+<!--                                class="btn btn-info btn-sm mr-1"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="'eye'"></fa-icon>-->
+<!--                                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>-->
+<!--                            </button>-->
+<!--                            <button-->
+<!--                                type="submit"-->
+<!--                                *ngIf="fileUploadExercise.isAtLeastInstructor"-->
+<!--                                [routerLink]="['/course-management', fileUploadExercise.course.id, 'file-upload-exercises', fileUploadExercise.id, 'edit']"-->
+<!--                                class="btn btn-primary btn-sm mr-1"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="'pencil-alt'"></fa-icon>-->
+<!--                                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>-->
+<!--                            </button>-->
+<!--                            <button-->
+<!--                                *ngIf="fileUploadExercise.isAtLeastInstructor"-->
+<!--                                jhiDeleteButton-->
+<!--                                [entityTitle]="fileUploadExercise.title"-->
+<!--                                deleteQuestion="artemisApp.exercise.delete.question"-->
+<!--                                deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"-->
+<!--                                (delete)="deleteFileUploadExercise(fileUploadExercise.id)"-->
+<!--                                [dialogError]="dialogError$"-->
+<!--                            >-->
+<!--                                <fa-icon [icon]="'times'"></fa-icon>-->
+<!--                            </button>-->
+<!--                        </div>-->
+                        <jhi-file-upload-exercise-row-buttons [courseId]="courseId", [exercise]="fileUploadExercise"></jhi-file-upload-exercise-row-buttons>
                     </td>
                 </tr>
             </tbody>
