--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -1,9 +1,15 @@
-<div class="border rounded" [style.max-width]="'780px'" [class.alert-success]="feedback.credits > 0" [class.alert-danger]="feedback.credits < 0" [class.alert-warning]="feedback.credits === 0">
+<div
+    class="border rounded"
+    [style.max-width]="'780px'"
+    [class.alert-success]="feedback.credits > 0"
+    [class.alert-danger]="feedback.credits < 0"
+    [class.alert-warning]="feedback.credits === 0"
+>
     <div class="m-2">
         <div *ngIf="!readOnly; else readOnlyFeedback" class="form-row align-items-start">
             <div class="form-group col-8" [style.max-width]="'500px'">
                 <label jhiTranslate="artemisApp.assessment.detail.feedback"></label>
-                <textarea class="form-control " rows="5" [(ngModel)]="feedback.detailText" [readOnly]="readOnly"></textarea>
+                <textarea class="form-control" rows="5" [(ngModel)]="feedback.detailText" [readOnly]="readOnly"></textarea>
             </div>
             <div class="form-group col-2" [style.max-width]="'100px'">
                 <label jhiTranslate="artemisApp.exercise.score"></label>
@@ -29,8 +35,12 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col pl-0">
-                <h5 class="d-inline"><span class="badge" [class.badge-success]="feedback.credits > 0" [class.badge-danger]="feedback.credits < 0" [class.badge-warning]="feedback.credits === 0">{{feedback.credits + 'P'}}</span></h5>
-                <h6 class="d-inline"> Tutor Comment:</h6>
+                <h5 class="d-inline">
+                    <span class="badge" [class.badge-success]="feedback.credits > 0" [class.badge-danger]="feedback.credits < 0" [class.badge-warning]="feedback.credits === 0">{{
+                        feedback.credits + 'P'
+                    }}</span>
+                </h5>
+                <h6 class="d-inline">Tutor Comment:</h6>
             </div>
             <div class="col d-flex justify-content-end">
                 <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm">
@@ -38,6 +48,6 @@
                 </button>
             </div>
         </div>
-        <div class="row ml-4 mt-2">{{feedback.detailText}}</div>
+        <div class="row ml-4 mt-2">{{ feedback.detailText }}</div>
     </div>
 </ng-template>
