--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-row-buttons.component.html
@@ -6,7 +6,7 @@
     <button
         type="submit"
         *ngIf="exercise.isAtLeastInstructor"
-        [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'assessment']"
+        [routerLink]="['/course-management', courseId, 'modeling-exercises', exercise.id, 'assessment']"
         class="btn btn-primary btn-sm mr-1"
     >
         <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
@@ -33,7 +33,7 @@
     <button
         type="submit"
         *ngIf="exercise.isAtLeastInstructor"
-        [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id]"
+        [routerLink]="['/course-management', courseId, 'modeling-exercises', exercise.id]"
         class="btn btn-info btn-sm mr-1"
     >
         <fa-icon [icon]="'eye'"></fa-icon>
@@ -42,7 +42,7 @@
     <button
         type="submit"
         *ngIf="exercise.isAtLeastInstructor"
-        [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'edit']"
+        [routerLink]="['/course-management', courseId, 'modeling-exercises', exercise.id, 'edit']"
         class="btn btn-primary btn-sm mr-1"
     >
         <fa-icon [icon]="'pencil-alt'"></fa-icon>
@@ -54,7 +54,7 @@
         [entityTitle]="exercise.title"
         deleteQuestion="artemisApp.exercise.delete.question"
         deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
-        (delete)="deleteFileUploadExercise()"
+        (delete)="deleteModelingExercise()"
         [dialogError]="dialogError$"
     >
         <fa-icon [icon]="'times'"></fa-icon>
