--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise.component.html
@@ -56,73 +56,7 @@
                     <td *ngIf="course.presentationScore !== 0">{{ modelingExercise.presentationScoreEnabled }}</td>
                     <td jhiTranslate="{{ 'artemisApp.DiagramType.' + modelingExercise.diagramType }}">{{ modelingExercise.diagramType }}</td>
                     <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button
-                                type="submit"
-                                *ngIf="modelingExercise.isAtLeastTutor"
-                                [routerLink]="['/course-management', modelingExercise.course.id, 'exercises', modelingExercise.id, 'scores']"
-                                class="btn btn-info btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'eye'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="modelingExercise.isAtLeastInstructor"
-                                [routerLink]="['/course-management', courseId, 'modeling-exercises', modelingExercise.id, 'assessment']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.courseOverview.exerciseDetails.instructorActions.submissions">Submissions</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="modelingExercise.isAtLeastTutor"
-                                [routerLink]="['/course-management', courseId, 'exercises', modelingExercise.id, 'participations']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.participations">Participations</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="modelingExercise.teamMode && modelingExercise.isAtLeastTutor"
-                                [routerLink]="['/course-management', modelingExercise.course.id, 'exercises', modelingExercise.id, 'teams']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'users'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.teams">Teams</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="modelingExercise.isAtLeastInstructor"
-                                [routerLink]="['/course-management', modelingExercise.course.id, 'modeling-exercises', modelingExercise.id]"
-                                class="btn btn-info btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'eye'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                            </button>
-                            <button
-                                type="submit"
-                                *ngIf="modelingExercise.isAtLeastInstructor"
-                                [routerLink]="['/course-management', modelingExercise.course.id, 'modeling-exercises', modelingExercise.id, 'edit']"
-                                class="btn btn-primary btn-sm mr-1"
-                            >
-                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                            </button>
-                            <button
-                                *ngIf="modelingExercise.isAtLeastInstructor"
-                                jhiDeleteButton
-                                [entityTitle]="modelingExercise.title"
-                                deleteQuestion="artemisApp.exercise.delete.question"
-                                deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
-                                (delete)="deleteModelingExercise(modelingExercise.id)"
-                                [dialogError]="dialogError$"
-                            >
-                                <fa-icon [icon]="'times'"></fa-icon>
-                            </button>
-                        </div>
+                        <jhi-modeling-exercise-row-buttons [courseId]="courseId" [exercise]="modelingExercise"></jhi-modeling-exercise-row-buttons>
                     </td>
                 </tr>
             </tbody>
