--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-inspector/plagiarism-inspector.component.html
@@ -1,1 +1,7 @@
-<div class="plagiarism-inspector">Plagiarism inspector</div>
+<div class="plagiarism-inspector">
+    <aside class="plagiarism-sidebar">Sidebar</aside>
+    <div class="plagiarism-main-window">
+        <jhi-plagiarism-header></jhi-plagiarism-header>
+        <jhi-plagiarism-split-view></jhi-plagiarism-split-view>
+    </div>
+</div>
