Add split.js to the project

--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.html
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.html
@@ -1,1 +1,4 @@
-<div class="plagiarism-split-view">Split View</div>
+<div class="plagiarism-split-view">
+    <div jhiPane>Pane Left</div>
+    <div jhiPane>Pane Right</div>
+</div>
