fix back buttons to return to test run dashboards. Allow complaints for test runs

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -19,6 +19,7 @@
     [nextSubmissionBusy]="nextSubmissionBusy"
     [isTeamMode]="exercise?.teamMode"
     [isAssessor]="isAssessor"
+    [isTestRun]="isTestRun"
     [isAtLeastInstructor]="isAtLeastInstructor"
     [canOverride]="canOverride"
     [result]="manualResult"
