--- a/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
+++ b/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
@@ -152,14 +152,27 @@
                     </td>
 
                     <td>
-                        <button
-                            *ngIf="!exercise.teamMode; else teamsLink"
-                            [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'tutor-dashboard']"
-                            class="btn btn-info btn-sm mr-1"
-                            [class.guided-tour]="exercise === exerciseForGuidedTour"
-                        >
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.exerciseDashboard">Exercise dashboard</span>
-                        </button>
+                        <ng-container *ngIf="!exercise.teamMode; else teamsLink">
+                            <ng-container *ngIf="!isTestRun; else testRun">
+                                <button
+                                    [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'tutor-dashboard']"
+                                    class="btn btn-info btn-sm mr-1"
+                                    [class.guided-tour]="exercise === exerciseForGuidedTour"
+                                >
+                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.exerciseDashboard">Exercise dashboard</span>
+                                </button>
+                            </ng-container>
+                            <ng-template #testRun>
+                                <button
+                                    [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'test-run-tutor-dashboard']"
+                                    class="btn btn-info btn-sm mr-1"
+                                    [class.guided-tour]="exercise === exerciseForGuidedTour"
+                                >
+                                    <span class="d-none d-md-inline" jhiTranslate="entity.action.exerciseDashboard">Exercise dashboard</span>
+                                </button>
+                            </ng-template>
+                        </ng-container>
+
                         <ng-template #teamsLink>
                             <button
                                 [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'teams']"
