add test run ribbon to clearly indicate test run

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -1,3 +1,4 @@
+<jhi-test-run-ribbon *ngIf="!!testRunId"></jhi-test-run-ribbon>
 <ng-container *ngIf="exam">
     <jhi-exam-participation-cover
         *ngIf="isVisible() && !isOver() && !examStartConfirmed"
