--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.scss
@@ -1,9 +1,11 @@
+@import 'src/main/webapp/content/scss/artemis-variables';
+
 .plagiarism-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid $body-bg;
 
     h4 {
         margin-bottom: 0;
