--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-split-view/plagiarism-split-view.component.scss
@@ -1,6 +1,9 @@
-@import 'src/main/webapp/content/scss/artemis-variables';
+:host {
+    height: 100%;
+}
 
 .plagiarism-split-view {
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
