--- a/src/main/webapp/app/exam/manage/test-runs/create-test-run-modal.component.html
+++ b/src/main/webapp/app/exam/manage/test-runs/create-test-run-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
     <div class="modal-header">
-        <h4 class="modal-title" id="createTestRunModal">Create Test Run</h4>
+        <h4 class="modal-title" id="createTestRunModal" jhiTranslate="artemisApp.examManagement.testRun.setup">Create Test Run</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
     </div>
 
@@ -19,7 +19,7 @@
 
         <div class="mb-3">
             <h5>Exercises</h5>
-            <p>Select an exercise for every exercise group by clicking on it.</p>
+            <p jhiTranslate="artemisApp.examManagement.testRun.setupHint">Select an exercise for every exercise group by clicking on it.</p>
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <tr>
