--- a/src/main/webapp/app/exam/manage/test-runs/test-run-management.component.html
+++ b/src/main/webapp/app/exam/manage/test-runs/test-run-management.component.html
@@ -8,7 +8,7 @@
             <div class="d-flex mb-1">
                 <button class="btn btn-primary btn-sm mr-1 mb-1" style="height: 40px" (click)="openCreateTestRunModal()" *ngIf="course?.isAtLeastInstructor" [disabled]="isLoading">
                     <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    <span jhiTranslate="artemisApp.examManagement.testRun.setup">Setup Test Run</span>
+                    <span jhiTranslate="artemisApp.examManagement.testRun.setup">Create a Test Run</span>
                 </button>
                 <button
                     class="btn btn-primary btn-sm mr-1 mb-1"
@@ -22,6 +22,9 @@
         </div>
     </div>
     <jhi-alert></jhi-alert>
+    <div style="padding-bottom: 10px">
+        <span jhiTranslate="artemisApp.examManagement.testRun.text"></span>
+    </div>
     <div class="table-responsive" *ngIf="testRuns">
         <table class="table table-striped">
             <thead>
