add student view for inline comments

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -31,6 +31,7 @@
                                 [fileName]="selectedFile"
                                 [codeLine]="i"
                                 [feedback]="fileFeedbackPerLine[i]"
+                                [isStudent]="isStudent"
                                 (onCancelFeedback)="onCancelFeedback()"
                                 (onUpdateFeedback)="updateFeedback($event)"
                                 (onDeleteFeedback)="deleteFeedback($event)"
