--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -42,7 +42,7 @@
                 </h5>
                 <h6 class="d-inline">Tutor Comment:</h6>
             </div>
-            <div class="col d-flex justify-content-end">
+            <div *ngIf="!isStudent" class="col d-flex justify-content-end">
                 <button type="submit" (click)="readOnly = false" class="btn btn-primary btn-sm">
                     <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
                 </button>
